# novareel-mcp

./: .env.example  .gitignore  Dockerfile.http  Dockerfile.sse  Dockerfile.stdio  LICENSE  README.md  build-all.sh  build-http.sh  build-sse.sh  build-stdio.sh  build.sh  docker-compose.yml  main.py  main_http.py  pyproject.toml  start.sh
.github/workflows/: docker-build.yml
examples/: basic_usage.py
src/novareel_mcp_server/: __init__.py  prompting_guide.py  server.py  server_http.py  server_sse.py
